# multi_camera_collector

./: .gitignore  CAMERA_INFO_FORMAT.md  CHANGELOG.md  CONFIG_FAQ.md  DATASET_GUIDE.md  FEATURE_SUMMARY.md  FPS_CONTROL.md  IMPLEMENTATION_SUMMARY.md  MERGE_EXAMPLES.md  MERGE_GUIDE.md  QUICK_START.md  README.md  build_and_install.sh  make_dataset.sh  merge_datasets.sh  package.xml  quick_start.sh  setup.cfg  setup.py
launch/: collector.launch.py  merge_datasets.launch.py
log/: latest_list
multi_camera_collector/: __init__.py  data_collector.py  dataset_generator.py  dataset_merger.py  make_dataset.py
resource/: multi_camera_collector
test/: test_dataset_merger.py  test_installation.py
